Adding some markdown text

--- a/Jupyter in github test.ipynb
+++ b/Jupyter in github test.ipynb
@@ -47,13 +47,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a text in a markdown cell.\n",
+    "A list:\n"
+   ]
   },
   {
    "cell_type": "code",
